firebase intregated with google-sign in-sign out

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@ body{
   padding: 20px 60px;
 }
 
+a{
+  text-decoration: none;
+  color: black;
+}
+
 .App {
   text-align: center;
 }
@@ -41,3 +46,7 @@ body{
     transform: rotate(360deg);
   }
 }
+
+*{
+  box-sizing: border-box;
+ }
