--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -8,8 +8,8 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
-    background-position: center;
-    background-size: cover;
+   // background-position: center;
+   // background-size: cover;
     overflow: hidden;
   
     &:large{
@@ -22,6 +22,11 @@
   
     &:last-child {
       margin-left: 7.5px;
+    }
+
+    @media screen and (max-width: 800px) {
+      height: 200px;
+
     }
 
     &:hover {
